3.3.0 b572
* added 3 new variable for use with player levelling: %home_distance%, %home_distance_with_bed%, "%bed_distance% (#292)
* general code improvements and refinements and removal of unused code (many contributions from @ProfliX )